--- a/ui/src/app/components/shared/carousel/carousel.component.html
+++ b/ui/src/app/components/shared/carousel/carousel.component.html
@@ -1,8 +1,8 @@
 <carousel [images]="slides"
-cellWidth="400"
-height="300"
-cellsToShow="1"
-autoplay="true"
+[cellWidth]="400"
+[height]="300"
+[cellsToShow]="1"
+[autoplay]="true"
 [arrows]="false"
 objectFit='contain'
 ></carousel>
